@@ -41,19 +41,24 @@ class ConsoleReporter(object):
 
     @ivar show_out (bool): include captured stdout on failure report
     @ivar show_err (bool): include captured stderr on failure report
+    @ivar outfile (string): file_path output is written to. None use stdout
     """
-    def __init__(self, show_out, show_err):
+    def __init__(self, show_out, show_err, outfile=None):
         # save non-succesful result information (include task errors)
         self.failures = []
         self.show_out = show_out
         self.show_err = show_err
-
+        self.outfile = outfile
+        if outfile is None:
+            self.outstream = sys.stdout
+        else:
+            self.outstream = open(outfile, 'w')
 
     def start_task(self, task):
         pass
 
     def execute_task(self, task):
-        print task.title()
+        self.outstream.write(task.title() + '\n')
 
     def add_failure(self, task, exception):
         self.failures.append({'task': task, 'exception':exception})
@@ -62,10 +67,10 @@ class ConsoleReporter(object):
         pass
 
     def skip_uptodate(self, task):
-        print "---", task.title()
+        self.outstream.write("---%s\n" % task.title())
 
     def skip_ignore(self, task):
-        print "!!!", task.title()
+        self.outstream.write("!!!%s\n" % task.title())
 
 
     def cleanup_error(self, exception):
@@ -75,18 +80,21 @@ class ConsoleReporter(object):
     def complete_run(self):
         # if test fails print output from failed task
         for result in self.failures:
-            sys.stderr.write("#"*40 + "\n")
-            sys.stderr.write('%s: %s\n' % (result['exception'].get_name(),
-                                           result['task'].name))
-            sys.stderr.write(result['exception'].get_msg())
-            sys.stderr.write("\n")
+            self.outstream.write("#"*40 + "\n")
+            self.outstream.write('%s: %s\n' % (result['exception'].get_name(),
+                                               result['task'].name))
+            self.outstream.write(result['exception'].get_msg())
+            self.outstream.write("\n")
             task = result['task']
             if self.show_out:
                 out = "".join([a.out for a in task.actions if a.out])
-                sys.stderr.write("%s\n" % out)
+                self.outstream.write("%s\n" % out)
             if self.show_err:
                 err = "".join([a.err for a in task.actions if a.err])
-                sys.stderr.write("%s\n" % err)
+                self.outstream.write("%s\n" % err)
+        if self.outfile is not None:
+            self.outstream.close()
+
 
 
 class ExecutedOnlyReporter(ConsoleReporter):
@@ -103,7 +111,7 @@ class ExecutedOnlyReporter(ConsoleReporter):
     def execute_task(self, task):
         # ignore tasks that do not define actions
         if task.actions:
-            print task.title()
+            self.outstream.write(task.title() + '\n')
 
 
 
@@ -146,7 +154,7 @@ class TaskResult(object):
 
 class JsonReporter(object):
     """save results in a file using JSON"""
-    def __init__(self, show_out=None, show_err=None):
+    def __init__(self, show_out=None, show_err=None, outfile=None):
         # show_out, show_err parameters are ignored.
         # json result is sent to stdout when doit finishes running
         self.t_results = {}
@@ -157,6 +165,7 @@ class JsonReporter(object):
         sys.stdout = StringIO.StringIO()
         self._old_err = sys.stderr
         sys.stderr = StringIO.StringIO()
+        self.outfile = outfile
 
     def start_task(self, task):
         self.t_results[task.name] = TaskResult(task)
@@ -193,7 +202,12 @@ class JsonReporter(object):
                      'err': log_err}
         # indent not available on simplejson 1.3 (debian etch)
         # json.dump(json_data, sys.stdout, indent=4)
-        json.dump(json_data, sys.stdout)
+        if self.outfile is None:
+            json.dump(json_data, sys.stdout)
+        else:
+            outstream = open(self.outfile, 'w')
+            json.dump(json_data, outstream)
+            outstream.close()
 
 
 # name of reporters class available to be selected on cmd line
